--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.servlet.context-path=/
 # log
 # error / warn / info / debug / trace
 logging.level.root=info
-logging.level.com.abcde.spring4=debug
+logging.level.com.abcde.cultureStay=debug
 
 # oracle set
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
