번역 api 테스트

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ mybatis.type-aliases-package=com.abcde.cultureStay
 
 #MyBatis mapper ?? ??
 mybatis.mapper-locations=mappers/**/*.xml
+
+#API Key for translation
+google.api.key=
