번역 api 테스트(임시, 실행 안됨)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,9 @@ mybatis.type-aliases-package=com.abcde.cultureStay
 #MyBatis mapper ?? ??
 mybatis.mapper-locations=mappers/**/*.xml
 
-#API Key for translation
-google.api.key=
+#application.properties
+spring.security.oauth2.client.registration.google.client-id=527056499323-bqk3ngc2ck7ufsjj0re8bjog52cqf4co.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=https://www.googleapis.com/auth/cloud-platform
+
+google.credentials.path=C:\
