로그인 화면 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,8 @@ spring.servlet.multipart.location=c:/Users/user/Desktop/cultureStay/src/main/res
 user.board.page=10
 # pagePerGroup
 user.board.group=5
+
+#인텔리J 개발환경 구축
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=true
+spring.thymeleaf.cache=false
