--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.3.1'
 	testImplementation 'org.springframework.security:spring-security-test'
 	implementation group: 'org.json', name: 'json', version: '20210307'
+	implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.4'
 
 }
 
