--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,10 +10,10 @@ logging.level.com.abcde.cultureStay=debug
 # oracle set
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/orcl
-#spring.datasource.username=test
-#spring.datasource.password=1234
-spring.datasource.username=choon
-spring.datasource.password=0000
+spring.datasource.username=test
+spring.datasource.password=1234
+#spring.datasource.username=choon
+#spring.datasource.password=0000
 
 #MyBatis type-alias ?? ???
 mybatis.type-aliases-package=com.abcde.cultureStay
