image 관련 properties명 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,9 @@ spring.servlet.multipart.maxFileSize=100MB
 spring.servlet.multipart.maxRequestSize=100MB
 spring.servlet.multipart.location=c:/cultureStay/upload/image
 
-util.image.url=http://localhost:3333/image/getImages/
+### ckeditor image 관련 속성 
+image.save.location=c:/cultureStay/upload/image
+image.getImage.url=http://localhost:3333/image/getImage/
 
 ### 사용자 정의 속성
 #게시판 관련
