--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	implementation group: 'org.json', name: 'json', version: '20210307'
 	implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.4'
+	implementation 'org.jsoup:jsoup:1.17.2'
 
 }
 
