--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,22 @@ dependencies {
 	implementation group: 'org.json', name: 'json', version: '20210307'
 	implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.4'
 	implementation 'org.jsoup:jsoup:1.17.2'
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	
+	// Commons IO 및 Commons FileUpload
+    implementation 'commons-io:commons-io:2.6'
+    implementation 'commons-fileupload:commons-fileupload:1.3.1'
+    
+    // Gson
+    implementation 'com.google.code.gson:gson:2.8.9'
+   
+   // json
+   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.2'
+   // https://mvnrepository.com/artifact/org.webjars/stomp-websocket
+   implementation group: 'org.webjars', name: 'stomp-websocket', version: '2.3.3-1'
+   
+   // 결제 테스트 express
+   implementation 'org.springframework.boot:spring-boot-starter-web'
 
 }
 
