새로운 환경에서 설정 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,10 @@ logging.level.com.abcde.cultureStay=debug
 
 # oracle set
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/orcl
-spring.datasource.username=test
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
+spring.datasource.username=c##test
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521/orcl
+#spring.datasource.username=test
 spring.datasource.password=1234
 #spring.datasource.username=choon
 #spring.datasource.password=0000
@@ -21,24 +23,24 @@ mybatis.type-aliases-package=com.abcde.cultureStay
 #MyBatis mapper ?? ??
 mybatis.mapper-locations=mappers/**/*.xml
 
-# 업로드 용량 제한: default 1M(1048576)
-# 업로드 경로로 지정한 디렉토리는 자동으로 생성됨
+# Ã¬ÂÂÃ«Â¡ÂÃ«ÂÂ Ã¬ÂÂ©Ã«ÂÂ Ã¬Â ÂÃ­ÂÂ: default 1M(1048576)
+# Ã¬ÂÂÃ«Â¡ÂÃ«ÂÂ ÃªÂ²Â½Ã«Â¡ÂÃ«Â¡Â Ã¬Â§ÂÃ¬Â ÂÃ­ÂÂ Ã«ÂÂÃ«Â ÂÃ­ÂÂ Ã«Â¦Â¬Ã«ÂÂ Ã¬ÂÂÃ«ÂÂÃ¬ÂÂ¼Ã«Â¡Â Ã¬ÂÂÃ¬ÂÂ±Ã«ÂÂ¨
 spring.servlet.multipart.maxFileSize=100MB
 spring.servlet.multipart.maxRequestSize=100MB
 spring.servlet.multipart.location=c:/cultureStay/upload/image
 
-### ckeditor image 관련 속성 
+### ckeditor image ÃªÂ´ÂÃ«Â Â¨ Ã¬ÂÂÃ¬ÂÂ± 
 image.save.location=c:/cultureStay/upload/image
 image.getImage.url=http://localhost:3333/image/getImage/
 
-### 사용자 정의 속성
-#게시판 관련
+### Ã¬ÂÂ¬Ã¬ÂÂ©Ã¬ÂÂ Ã¬Â ÂÃ¬ÂÂ Ã¬ÂÂÃ¬ÂÂ±
+#ÃªÂ²ÂÃ¬ÂÂÃ­ÂÂ ÃªÂ´ÂÃ«Â Â¨
 # countPerPage
 user.board.page=10
 # pagePerGroup
 user.board.group=5
 
-#인텔리J 개발환경 구축
+#Ã¬ÂÂ¸Ã­ÂÂÃ«Â¦Â¬J ÃªÂ°ÂÃ«Â°ÂÃ­ÂÂÃªÂ²Â½ ÃªÂµÂ¬Ã¬Â¶Â
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
 spring.thymeleaf.cache=false
