--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,10 +10,10 @@ logging.level.com.abcde.cultureStay=debug
 # oracle set
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/orcl
-spring.datasource.username=test
-spring.datasource.password=1234
-#spring.datasource.username=choon
-#spring.datasource.password=0000
+#spring.datasource.username=test
+#spring.datasource.password=1234
+spring.datasource.username=choon
+spring.datasource.password=0000
 
 #MyBatis type-alias ?? ???
 mybatis.type-aliases-package=com.abcde.cultureStay
@@ -42,3 +42,12 @@ user.board.group=5
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
 spring.thymeleaf.cache=false
+
+# email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=choon6602@gmail.com
+spring.mail.password=ejrf gqkz lblg faro
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.starttls.enable=true
