노트북에서 메신저 실행

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,10 @@ logging.level.com.abcde.cultureStay=debug
 
 # oracle set
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
-spring.datasource.username=c##test
-#spring.datasource.url=jdbc:oracle:thin:@localhost:1521/orcl
-#spring.datasource.username=test
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
+#spring.datasource.username=c##test
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/orcl
+spring.datasource.username=test
 spring.datasource.password=1234
 #spring.datasource.username=choon
 #spring.datasource.password=0000
