--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,7 +49,7 @@ spring.thymeleaf.cache=false
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=choon6602@gmail.com
-spring.mail.password=ejrf gqkz lblg faro
+spring.mail.password=ypbi ampt zkcy kirs
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
